--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "reinstall": "rimraf node_modules package-lock.json && npm install"
   },
   "dependencies": {
+    "@types/cheerio": "^0.22.35",
+    "cheerio": "^1.2.0",
     "lucide-react": "^0.400.0",
     "next": "^16.1.6",
     "react": "^18.3.0",
